--- a/root-application.yaml
+++ b/root-application.yaml
@@ -7,7 +7,7 @@ spec:
   project: default
   source:
     # Sync Root Application first
-    repoURL: https://github.com/smooti/platform-bootstrap.git
+    repoURL: https://github.com/smooti/platform-services.git
     path: apps/argo-root
     targetRevision: HEAD
   destination:
@@ -19,11 +19,11 @@ spec:
       selfHeal: true
   sources:
     # Sync projects
-    - repoURL: https://github.com/smooti/platform-bootstrap.git
+    - repoURL: https://github.com/smooti/platform-services.git
       targetRevision: HEAD
       path: projects
 
     # Sync core apps
-    - repoURL: https://github.com/smooti/platform-bootstrap.git
+    - repoURL: https://github.com/smooti/platform-services.git
       targetRevision: HEAD
-      path: apps/core
+      path: appsets
