Fixing path to values

--- a/appsets/prod.yaml
+++ b/appsets/prod.yaml
@@ -25,7 +25,8 @@ spec:
         helm:
           releaseName: '{{.path.basename}}'
           valueFiles:
-            - $values/apps/{{.path.basename}}/environments/local-prod/values.yaml
+            - $values/apps/{{.path.basename}}/common/common-values.yaml
+            - $values/apps/{{.path.basename}}/environments/local-prod/default-env-values.yaml
 
       destination:
         server: https://kubernetes.default.svc
