--- a/appsets/prod.yaml
+++ b/appsets/prod.yaml
@@ -18,15 +18,21 @@ spec:
     spec:
       project: default
 
-      source:
-        repoURL: '{{.chart.repoURL}}'
-        chart: '{{.chart.name}}'
-        targetRevision: '{{.chart.version}}'
-        helm:
-          releaseName: '{{.path.basename}}'
-          valueFiles:
-            - $values/apps/{{.path.basename}}/common/common-values.yaml
-            - $values/apps/{{.path.basename}}/environments/local-prod/default-env-values.yaml
+      sources:
+        # Chart Git repo
+        - repoURL: '{{.chart.repoURL}}'
+          chart: '{{.chart.name}}'
+          targetRevision: '{{.chart.version}}'
+          helm:
+            releaseName: '{{.path.basename}}'
+            valueFiles:
+              - $values/apps/{{.path.basename}}/common/common-values.yaml
+              - $values/apps/{{.path.basename}}/local-prod/default-env-values.yaml
+
+        # Values Git repo (THIS defines $values)
+        - repoURL: https://github.com/smooti/platform-services.git
+          targetRevision: HEAD
+          ref: values
 
       destination:
         server: https://kubernetes.default.svc
