This appset should be under the project platform

--- a/appsets/prod.yaml
+++ b/appsets/prod.yaml
@@ -17,7 +17,7 @@ spec:
     metadata:
       name: '{{.path.basename}}-prod'
     spec:
-      project: default
+      project: platform
 
       sources:
         # Chart Git repo
