--- a/projects/platform.yaml
+++ b/projects/platform.yaml
@@ -1,3 +1,4 @@
+# This file defines the Argo CD Application Project for the platform services.
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
