--- a/appsets/prod.yaml
+++ b/appsets/prod.yaml
@@ -25,6 +25,7 @@ spec:
           chart: '{{.chart.name}}'
           targetRevision: '{{.chart.version}}'
           helm:
+            ignoreMissingValueFiles: true
             releaseName: '{{.path.basename}}'
             valueFiles:
               - $values/apps/{{.path.basename}}/common/common-values.yaml
